--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,6 @@ train_model = "python3.11 model/train_model.py"
 format = "black ."
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core=1.5.1"]
 build-backend = "poetry.core.masonry.api"
  
