--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Task 1 for course DLBDSMTP01 B.Sc. Data Science"
 authors = ["Manuel Vogt <vogt.manuel@proton.me>"]
 
 [tool.poetry.dependencies]
-python = ">=3.10, <=3.11.4"
+python = ">=3.10, <=3.11.5"
 numpy = "^1.25.2"
 scikit-learn = "^1.3.0"
 flask = "^2.3.3"
@@ -21,6 +21,7 @@ sim = "python3.11 sensor/simulate_sensors_stream.py"
 serve = "python3.11 server/main.py"
 gen_data = "python3.11 model/generate_artificial_dataset.py"
 train_model = "python3.11 model/train_model.py"
+sensors =   "python3.11 sensor/simulate_sensors_stream.py"
 format = "black ."
 
 [build-system]
